# cpp_vk_geronimo_vk

./: CMakeLists.txt  compile_shaders.py  readme.md
app/: geronimo_vk.cpp  imgui_utils.cpp  imgui_utils.h  libdicom.cpp  libdicom.h  window.cpp  window.h
assets/: bagulho.blend  bagulho.blend1  bagulho.glb  ball.glb  cone.glb  floor.glb  monkey.glb  sphere.glb
components/: animation.cpp  animation.h  camera.cpp  camera.h  directional_light.cpp  directional_light.h  image_table.cpp  image_table.h  lights.cpp  lights.h  main_render_pass.cpp  main_render_pass.h  mesh.cpp  mesh.h  renderable.cpp  renderable.h  shadow_map_pipeline.cpp  shadow_map_pipeline.h  shadow_map_render_pass.cpp  shadow_map_render_pass.h  solid_phong_pipeline.cpp  solid_phong_pipeline.h  transform.h  uniform_buffers.h  volume_render_pass.cpp  volume_render_pass.h
data_structures/: ring_buffer.h  vk_dynamic_offset_buffer.h  vk_ring_buffer.h
io/: image-load.cpp  mesh-load.cpp  mesh-load.h
mem/: vma_helper.cpp  vma_helper.h
shaders/: directional_shadow_map.frag  directional_shadow_map.vert  phong.frag  phong.vert  volume_raycast.frag  volume_raycast.vert
utils/: hash.cpp  hash.h  vk_utils.cpp  vk_utils.h
vk/: debug_utils.cpp  depth_buffer.cpp  device.cpp  device.h  extensions.h  frame.cpp  frame.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  swap_chain.cpp  swap_chain.h  synchronization_service.cpp  synchronization_service.h
